# mandelbrot

./: Cargo.toml  LICENSE  index.html  styles.scss
.github/workflows/: build.yml
src/: lib.rs  main.rs
